5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1670_2973.log
== TEST (2019-04-16 18:36:31) 
-- CODE:
S = So + vt
So = 0
v = 170
t = 20
(print(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = So + vt
NameError: name 'So' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:36:40) 
-- CODE:
S = So + vt
So = 0
v = 170
t = 20
(print(int))
-- EXECUTION TIME:
0.201808
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2973/main.py", line 1, in <module>
    S = So + vt
NameError: name 'So' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:55) 
-- CODE:
S = So + vt
So = 0
v = 170
t = 20
(print(int()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = So + vt
NameError: name 'So' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
